--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "colors": "^1.3.0",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "mongoose": "^5.2.3",
     "nodemon": "^1.18.1"
   }
