--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/mariogabrielcampos/ceiiaBicicletas#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "colors": "^1.3.0",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
