--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.3",
+    "mosca": "^2.8.3",
+    "mqtt": "^2.18.3",
     "nodemon": "^1.18.1"
   }
 }
